<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <ImageView
            android:id="@+id/profile_picture_header_side_view"
            android:layout_width="@dimen/profile_picture_header_side_view_height"
            android:layout_height="@dimen/profile_picture_header_side_view_width"
            android:layout_marginStart="@dimen/margin_information_header"
            android:layout_marginBottom="@dimen/margin_information_header"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_text_information_start"
            android:layout_marginTop="@dimen/margin_text_information_top"
            android:layout_toEndOf="@+id/profile_picture_header_side_view"
            >
            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>