<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailsActivity">


...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_layout_action"
        tools:listitem="@layout/detail_list_workmates"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detail_booked_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/detail_restaurant_picture"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_end_detail_fab"
        android:layout_marginBottom="@dimen/margin_bottom_detail_fab"
...
